# umon

./: .gitignore  docker-compose.yml  project  test.sh
cache/: readme.md
monitor/: .dockerignore  Dockerfile
monitor/adapter-web/: package-lock.json  package.json  webpack.config.js
monitor/adapter-web/src/: adapter.js  main.js  session.js  validator.js
monitor/backend/: Cargo.toml
monitor/backend/src/: actor.rs  args.rs  config.rs  fs.rs  main.rs  model.rs  server.rs
monitor/backend/src/actor/: chan.rs  comm.rs  conn.rs  db.rs  dist.rs  sub.rs
monitor/backend/src/actor/db/: repo_data.rs  transacrion.rs
monitor/backend/src/config/: deser.rs
monitor/backend/src/model/: dataflow.rs  session.rs  user.rs  wplace.rs
monitor/backend/src/server/: adapter.rs  model.rs  reject.rs
monitor/sh-container/: build-backend.sh  resolve-uidgid.sh  start-monitor.sh  start.sh
monitor/volume-src/storage/config/: main.json
monitor/volume-src/storage/config/users/: oper.json
monitor/volume-src/storage/config/wplaces/: local-wplace.json
monitor/volume-src/storage/public/: MQTTMonitor.js  index.html
publisher/: Dockerfile
publisher/src/: ping.sh  start.sh  test-search.sh  test-social.sh
volume-dst/: README.md
