[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["io-util", "net", "time", "rt", "macros", "sync"] }
futures-util = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.2"
rusty_ulid = "1.0.0"
base64 = "0.13.0"
clap = { version = "3.2.11", features = ["derive"] }
http = "0.2.8"
regex = "1.6.0"
lazy_static = "1.4.0"
hyper = "0.14.19"
tokio-util = "0.7.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.19"
rumqttc = "0.16.0"
bytes = "1.2.1"
url = "2.2.2"
indexmap = "1.9.1"